<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            style="@style/SectionCardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fileSendMaterialCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/CardViewTitleTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/send_file"
                    android:id="@+id/sendFileTitleTextView" />

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sendFileTitleTextView"
                    android:text="@string/step1"
                    android:id="@+id/sendFileStep1TextView"
                    android:layout_margin="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/sendFileStep1TextView"
                    app:layout_constraintTop_toTopOf="@id/sendFileStep1TextView"
                    android:text="@string/choose_the_file_to_send"
                    android:layout_marginStart="10dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/MaximOutlinedButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sendFileStep1TextView"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/select_file"
                    android:id="@+id/selectFileButton" />

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toEndOf="@id/selectFileButton"
                    app:layout_constraintTop_toTopOf="@id/selectFileButton"
                    app:layout_constraintBottom_toTopOf="@id/sendFileSelectedTextView"
                    android:text="@string/file_selected"
                    android:id="@+id/sendFileSelectedTitleTextView"
                    android:layout_marginStart="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/selectFileButton"
                    app:layout_constraintTop_toBottomOf="@id/sendFileSelectedTitleTextView"
                    app:layout_constraintBottom_toBottomOf="@id/selectFileButton"
                    tools:text="AE851123.cfg"
                    android:text="@string/no_file_is_selected"
                    android:id="@+id/sendFileSelectedTextView"
                    android:layout_marginStart="10dp"/>

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectFileButton"
                    android:text="@string/step2"
                    android:id="@+id/sendFileStep2TextView"
                    android:layout_margin="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/sendFileStep2TextView"
                    app:layout_constraintTop_toTopOf="@id/sendFileStep2TextView"
                    android:text="@string/send_the_file_when_ready"
                    android:layout_marginStart="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    style="@style/MaximOutlinedButton"
                    app:layout_constraintStart_toStartOf="@id/selectFileButton"
                    app:layout_constraintEnd_toEndOf="@id/selectFileButton"
                    app:layout_constraintTop_toBottomOf="@id/sendFileStep2TextView"
                    android:layout_marginTop="10dp"
                    android:text="@string/send_file"
                    android:id="@+id/sendFileButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/SectionCardView"
            app:layout_constraintTop_toBottomOf="@id/fileSendMaterialCardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/contentMaterialCardView"
            android:paddingBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/CardViewTitleTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/content"
                    android:id="@+id/contentTitleTextView" />

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contentTitleTextView"
                    android:text="@string/step1"
                    android:id="@+id/contentStep1TextView"
                    android:layout_margin="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/contentStep1TextView"
                    app:layout_constraintTop_toTopOf="@id/contentStep1TextView"
                    android:text="@string/get_the_file_content_from_device"
                    android:layout_marginStart="10dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/MaximOutlinedButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contentStep1TextView"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/get_content"
                    android:id="@+id/getContentButton" />

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/getContentButton"
                    android:text="@string/step2"
                    android:id="@+id/contentStep2TextView"
                    android:layout_margin="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/contentStep2TextView"
                    app:layout_constraintTop_toTopOf="@id/contentStep2TextView"
                    android:text="@string/review_the_file_system"
                    android:layout_marginStart="10dp"/>

                <LinearLayout
                    android:id="@+id/contentTreeViewLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintHeight_min="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contentStep2TextView"
                    android:layout_margin="10dp"
                    android:orientation="vertical" />

                <com.google.android.material.button.MaterialButton
                    style="@style/MaximOutlinedButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contentTreeViewLinearLayout"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/get_file"
                    android:id="@+id/getFileButton" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toEndOf="@id/getFileButton"
                    app:layout_constraintTop_toTopOf="@id/getFileButton"
                    app:layout_constraintBottom_toBottomOf="@id/getFileButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    tools:text="File Name"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:background="@android:drawable/editbox_background_normal"
                    android:id="@+id/getFileTextView"/>

                <TextView
                    style="@style/CardViewBoldTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/getFileButton"
                    android:text="@string/step3"
                    android:id="@+id/contentStep3TextView"
                    android:layout_margin="10dp"/>

                <TextView
                    style="@style/CardViewNormalTextView"
                    app:layout_constraintStart_toEndOf="@id/contentStep3TextView"
                    app:layout_constraintTop_toTopOf="@id/contentStep3TextView"
                    android:text="Observe the file content"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/contentStep3TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:id="@+id/contentDisplayTextView"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:layout_constraintTop_toBottomOf="@id/contentStep3TextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp"
                    android:id="@+id/contentDisplayImageView"
                    android:adjustViewBounds="true"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>