...
    <string name="send_the_file_when_ready">Send the file when ready</string>
    <string name="send_file">Send File</string>
    <string name="send">Send</string>
    <string name="shut_down_device">Shut Down Device</string>
    <string name="restart_device">Restart Device</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="no_file_is_selected">No file is selected</string>
    <string name="content">Content</string>
    <string name="get_the_file_content_from_device">Get the file content from device</string>
    <string name="get_content">Get Content</string>
    <string name="review_the_file_system">Review the file system</string>
    <string name="get_file">Get File</string>
    <string name="step3">Step 3:</string>
...
